# Outlast-2-Shared-Inventory-Mod

./: CMakeLists.txt  WinBuild.py  imgui.ini  main.cpp  run.py
src/Memory/: Memory.cpp  Memory.hpp
src/Process/: Process.cpp  Process.hpp
src/Window/: Window.cpp  Window.hpp
